Changed header link to relative link to root. Had been set relative for my sandbox site.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header id='globalHeader'>
         <div id="desk-nav">
           <div id='logo-wrap' class='center'>
-           <a href='/sites/norgrendesign' class='homeBtn'>
+           <a href='/' class='homeBtn'>
               <figure id='headerIcon' class='logo'></figure>
               <h1>Norgren Designs</h1>
             </a>
