--- a/index.html
+++ b/index.html
@@ -10,49 +10,19 @@
 
     <script src="public/js/app.js"></script>
 
-
     <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="public/css/style.css">
 
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-70492043-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
 </head>
 
-<body>
-    <div id="nd">
+<body ng-controller="ndCtrl">
 
-      <!-- header -->
-      <header id="globalHeader" ng-include="views/header.html"></header>
+  <a href="/main/">Main</a>
+  <a href="/about/">About</a>
+  <a href="/services/">Services</a>
+  <a href="/contact/">Contact</a>
 
-       <div class="background-array">
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-         <figure></figure>
-       </div>
+  <header ng-include="header.html"></header>
 
-       <div id='contentSection'>
-         <!-- section views -->
-       </div>
-
-       <div class='nav-background'></div>
-
-    </div>
-    <footer>
-      <p class="copy-footer">&copy; <span></span> Norgren Designs</p>
-    </footer>
 </body>
 </html>
