--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.0/angular-route.js"></script>
 
     <script src="public/js/app.js"></script>
+    <script src="controllers/ndCtrl.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="public/css/style.css">
