Began cleaning up styles and optimizing in sass.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body ng-controller="ndCtrl">
 
-  <header ng-include="'views/header.html'"></header>
+  <header ng-include="'views/header.html'" id="globalHeader"></header>
 
   <div ng-view></div>
 
